# icelang-ls

./: .gitignore  Cargo.toml
src/: analyzer.rs  ast.rs  backend.rs  builtins.rs  completion.rs  declarations.rs  diagnostic.rs  document.rs  lib.rs  main.rs  utils.rs
vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
vscode/syntaxes/: icelang.tmLanguage.json
