[package]
name = "icelang-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.0"
lazy_static = "1.4.0"
ropey = "1.6.0"
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tree-sitter = "0.20.10"
tree-sitter-icelang = "0.1.5"

[build-dependencies]
cc = "*"
